--- a/test_manus/manual.bib
+++ b/test_manus/manual.bib
@@ -84,3 +84,12 @@ title = {{SIMO: An adaptable simulation framework for multiscale forest resource
 volume = {66},
 year = {2009}
 }
+
+@article{Zimova2020,
+author = {Zimov{\'{a}}, Soňa and Dobor, Laura and Hl{\'{a}}sny, Tom{\'{a}}{\v{s}} and Rammer, Werner and Seidl, Rupert},
+file = {:/fileservices.ad.jyu.fi/homes/mpotterf/My Documents/Mendeley Desktop/Zimova{\_}rotation{\_}2020{\_}R2{\_}Clean.pdf:pdf},
+journal = {Forest Ecology and Management},
+pages = {1--50},
+title = {{Reducing rotation age to address increasing disturbances in Central Europe : Potential and limitations}},
+year = {2020}
+}
