--- a/test_manus/test_manus.tex
+++ b/test_manus/test_manus.tex
@@ -212,7 +212,7 @@ relevant to stands height, changes and species compositions.
 
 \section{Methods}\label{methods}
 
-\paragraph{Study area}\label{study-area}
+\subsubsection{Study area}\label{study-area}
 
 Our study area represents a typical Finnish production forested
 landscape with relatively structurally homogenous forests stands. In
@@ -222,21 +222,21 @@ total, we used 1475 forests stands aggregated within a single watershed
 source data from the Finnish Forest Centre (available on www.metsaan.fi)
 providing currents stand conditions in 2016.
 
-Our input dataset includes initial stand conditions (2016), alternative
-forest growth under the range of forest managemnet regimes over 100
-years and a set of optimal solutions balancing between intensifying
-harvest levels and multifunctionnality (from completely set-aside,
-i.e.~no management to maximal harvest gains). From the set of optimal
-solutions we have calculated stand-level probability of wind damage (for
-full details, please refer to Eyvindson et al. (2021) study (Fig.
-\ref{workflow})).
-
 \begin{figure}
 \centering
 \includegraphics{/MyTemp/myGitLab/windDamage/externalFigs/studyArea_crop.png}
 \caption{The study area located in Central Finland (watershed 14.534)
 comprising 1475 forest stands.\label{study_area}}
 \end{figure}
+
+Our input dataset includes initial stand conditions (2016), alternative
+forest growth under the range of forest managemnet regimes over 100
+years and a set of optimal solutions balancing between intensifying
+harvest levels and multifunctionnality (from completely set-aside,
+i.e.~no management to maximal harvest gains). From the set of optimal
+solutions we have calculated stand-level probability of wind damage (for
+full details, please refer to Eyvindson et al. (2021) study. Fig.
+\ref{workflow}) represents study workflow.
 
 \begin{figure}
 \centering
@@ -247,7 +247,7 @@ management, and constriuction of teh harvesting intensity gradient using
 optimization to landscape level stand configurations.\label{workflow}}
 \end{figure}
 
-\paragraph{Forest stand development under different
+\subsubsection{Forest stand development under different
 regimes}\label{forest-stand-development-under-different-regimes}
 
 We simulated the development of the forests stands using SIMO forest
@@ -268,7 +268,7 @@ for less fertile sites to 22m2/ha for fertile sites) prior to harvesting
 by -3, ±0, +3, +6, and delayed the timing of the first harvest in 5 year
 increments up to a delay of 45 years.
 
-\paragraph{Optimization}\label{optimization}
+\subsubsection{Optimization}\label{optimization}
 
 The optimal forest management explores the trade-offs between net
 present income (NPI) and forest multifunctionality. NPI represents
@@ -293,7 +293,7 @@ one management regime by scenario. This allowed to reconstruct stand
 structure on particular stand under given management regime at specific
 time.
 
-\paragraph{Wind risk calculation}\label{wind-risk-calculation}
+\subsubsection{Wind risk calculation}\label{wind-risk-calculation}
 
 We have calculated the probability of wind damage based on Suvanto et
 al. (2019) binomial generalized linear model with logit-link function
@@ -314,7 +314,7 @@ characteristics, remained stable during our 100 years simulation. We
 processed the datasets, calculated damage probability models, and
 visualized results using R Development Core Team (2019).
 
-\paragraph{Data processing}\label{data-processing}
+\subsubsection{Data processing}\label{data-processing}
 
 We calculated the probability of wind damage for each stand, scenario
 and time intervals. Further, we averaged the wind risk values over the
@@ -324,15 +324,20 @@ given the management groups and over harvest gradient (from set-aside to
 maximal harvest levels). In addition, we investigated the mean levels of
 the standing log and pulp timber volumes (m3) for scenarios, and total
 sum of harvested pulp and log timber over simulation run (XXX). We
-further investigated the means of dynamic parameters (tree species,
+further investigated the changes in dynamics parameters (tree species,
 dominant tree height, frequency of open edges and time since thinning)
 over the harvest intensity gradient to understand how they contributed
-to predicted wind risk values.
+to predicted wind risk values. As different tree species varied in wind
+risk probability, we further groupped this variable by species to
+understand differences between species, Specifically, we calculated mean
+proportion of individual tree species (\%), mean tree heights (m),
+proportion of the stands with open edge from total amount of stands by
+species and mean thinning frequencies by year.
 
 \section{Results}\label{results}
 
-\paragraph{Landscape level wind risk under management restriction and
-harvest intensity
+\subsubsection{Landscape level wind risk under management restriction
+and harvest intensity
 scenarios}\label{landscape-level-wind-risk-under-management-restriction-and-harvest-intensity-scenarios}
 
 The set-aside landscape level management resulted at the same mean
@@ -354,7 +359,8 @@ set-aside stands.
 over harvest intensity gradient}
 \end{figure}
 
-\paragraph{Timber volume at wind risk}\label{timber-volume-at-wind-risk}
+\subsubsection{Timber volume at wind
+risk}\label{timber-volume-at-wind-risk}
 
 Increasing harvesting levels lowers the amount of the available timber
 at any time step to be lost due to windthrows. Interestingly, the CCF
@@ -385,32 +391,32 @@ total standing volume See figure
 @ref(fig:fig\_5\_proportion\_V\_pulp\_log) NEW FIG
 @ref(fig\_5\_proportion\_V\_pulp\_log).
 
-\subsubsection{Dynamic parameters contributing to wind
+\subsection{Dynamic parameters contributing to wind
 risk}\label{dynamic-parameters-contributing-to-wind-risk}
 
-\paragraph{Species composition}\label{species-composition}
+\subsubsection{Species composition}\label{species-composition}
 
 The intensification of the harvesting changes the stand species
 composition over time (Fig. \ref{species_change}). Intensification of
 the harvesting favorize the proportion of the Norway spruce and others
 (deciduous) tree species instead of Scots pine, which likely in turn
-increases wind risk over the stands.
+increases wind risk over the stands. Proportion of the pine lowers with
+higher harvest intensities.
 
 \begin{figure}
 \centering
 \includegraphics{test_manus_files/figure-latex/species_change-1.pdf}
 \caption{Changes in species composition under different management
-groups and harvest intensity. (The ALL scenario leads to highest
-economic gain, tehrefore values for CCF and RF are missing from plot)}
+groups and harvest intensity.}
 \end{figure}
 
-\paragraph{Dominant tree heights}\label{dominant-tree-heights}
+\subsubsection{Dominant tree heights}\label{dominant-tree-heights}
 
-The intensification of the harvesting changes the stand species
-composition over time (Fig. \ref{species_change}). Intensification of
-the harvesting favorize the proportion of the Norway spruce and others
-(deciduous) tree species instead of Scots pine, which likely in turn
-increases wind risk over the stands.
+The intensification of the harvest reduce mean tree height for other
+species to half (from 20 m to 10 m) in RF, while CCF slightly increases
+mean tree heights.For pine and spruce trees, harvest intensification
+maintain the mean tree height of the stand to 20 m(other) to 22 m
+(spruce). Spruce is higher then pine and other stree species.
 
 \begin{figure}
 \centering
@@ -419,127 +425,33 @@ increases wind risk over the stands.
 harvest intensity.}
 \end{figure}
 
-\paragraph{Frequency of open stands}\label{frequency-of-open-stands}
+\subsubsection{Frequency of open stands}\label{frequency-of-open-stands}
 
-RF regimes increase the amount of stands with open edge with increasing
-harvest intensity while CCF regimes maintain the same amount of open
-stands over the harvest intensity gradient. Intensive RF increases
-number of stands with open edge by 5\%.
+The proportion of the open edge stands remains very high over whole
+simulation run, which is likely due to the fragmeneted landscape
+(85-95\% of stands by species, Fig. 2, Fig. XX). However, increasing
+harvest intensity lowers number of stands with open edge when dominated
+by other species, whereas increases those numbers for pine and spruce
+dominated spatnd, especially under RF. The CCF and ALL management groups
+maintain the number of the open edge stands similar to completely set
+aside stands.
 
 \begin{figure}
 \centering
 \includegraphics{test_manus_files/figure-latex/fig_6_count_open_edge-1.pdf}
-\caption{Yearly count of stands with open edge over the intensity
-gradient}
+\caption{Yearly proportion stands with open edge by species, management
+group and over the harvest intensity gradient. Note y axis starts at
+80.}
 \end{figure}
 
-\paragraph{Thinning frequency}\label{thinning-frequency}
+\subsubsection{Thinning frequency}\label{thinning-frequency}
 
-\begin{verbatim}
-##                id year Age cash_flow       BA        V V_stand_log V_stand_pulp
-##       1: 12515084 2016  51         0 15.92991 121.9846    50.43912     69.03075
-##       2: 12515084 2021  56         0 15.97570 122.4578    50.81278     69.09368
-##       3: 12515084 2026  61         0 16.02149 122.9315    50.94787     69.39531
-##       4: 12515084 2031  66         0 16.06730 123.4057    51.08273     69.69723
-##       5: 12515084 2036  71         0 16.11311 123.8802    51.21737     70.11885
-##      ---                                                                       
-## 1852196:  6691970 2091 165         0 14.02046 149.2695   126.53544     21.80980
-## 1852197:  6691970 2096 170         0 13.75152 146.9029   126.40365     19.62537
-## 1852198:  6691970 2101 175         0 13.57640 145.4288   125.87290     18.73834
-## 1852199:  6691970 2106 180         0 13.47255 144.6260   125.76314     18.08305
-## 1852200:  6691970 2111 185         0 13.42110 144.3109   126.50326     17.01734
-##          Harvested_V Harvested_V_log_under_bark Harvested_V_pulp_under_bark
-##       1:           0                          0                           0
-##       2:           0                          0                           0
-##       3:           0                          0                           0
-##       4:           0                          0                           0
-##       5:           0                          0                           0
-##      ---                                                                   
-## 1852196:           0                          0                           0
-## 1852197:           0                          0                           0
-## 1852198:           0                          0                           0
-## 1852199:           0                          0                           0
-## 1852200:           0                          0                           0
-##          Biomass        N THIN PEAT    H_dom     D_gm income_biomass
-##       1:       0 697.8802 <NA>    1 167.9335 18.70460              0
-##       2:       0 696.3087 <NA>    1 168.1394 18.73898              0
-##       3:       0 694.7542 <NA>    1 168.3448 18.77329              0
-##       4:       0 693.2163 <NA>    1 168.5497 18.80752              0
-##       5:       0 691.6946 <NA>    1 168.7540 18.84168              0
-##      ---                                                            
-## 1852196:       0 251.7209 <NA>    0 260.0189 29.40783              0
-## 1852197:       0 241.5970 <NA>    0 260.4277 29.55030              0
-## 1852198:       0 233.8745 <NA>    0 260.8226 29.69387              0
-## 1852199:       0 228.0484 <NA>    0 261.2026 29.83591              0
-## 1852200:       0 223.6549 <NA>    0 261.5679 29.97626              0
-##          CARBON_STORAGE name_new branching_new avohaakut THIN_included
-##       1:             NA       SA          <NA>        SA         FALSE
-##       2:             NA       SA          <NA>        SA         FALSE
-##       3:             NA       SA          <NA>        SA         FALSE
-##       4:             NA       SA          <NA>        SA         FALSE
-##       5:             NA       SA          <NA>        SA         FALSE
-##      ---                                                              
-## 1852196:       267558.7       SA          <NA>        SA         FALSE
-## 1852197:       262147.2       SA          <NA>        SA         FALSE
-## 1852198:       256662.0       SA          <NA>        SA         FALSE
-## 1852199:       251972.7       SA          <NA>        SA         FALSE
-## 1852200:       247921.1       SA          <NA>        SA         FALSE
-##          mainRegime scenSimpl2 scenNumb landscape difference time_thinning
-##       1:         SA        ALL        0 2016_ALL0         NA           >10
-##       2:         SA        ALL        0 2021_ALL0         NA           >10
-##       3:         SA        ALL        0 2026_ALL0         NA           >10
-##       4:         SA        ALL        0 2031_ALL0         NA           >10
-##       5:         SA        ALL        0 2036_ALL0         NA           >10
-##      ---                                                                  
-## 1852196:         SA         RF        9  2091_RF9         NA           >10
-## 1852197:         SA         RF        9  2096_RF9         NA           >10
-## 1852198:         SA         RF        9  2101_RF9         NA           >10
-## 1852199:         SA         RF        9  2106_RF9         NA           >10
-## 1852200:         SA         RF        9  2111_RF9         NA           >10
-##          avoh_Simpl simpleScen open_edge      area siteFertility
-##       1:         SA        ALL      TRUE 10218.091          poor
-##       2:         SA        ALL      TRUE 10218.091          poor
-##       3:         SA        ALL      TRUE 10218.091          poor
-##       4:         SA        ALL      TRUE 10218.091          poor
-##       5:         SA        ALL      TRUE 10218.091          poor
-##      ---                                                        
-## 1852196:         SA         RF      TRUE  2479.115       fertile
-## 1852197:         SA         RF      TRUE  2479.115       fertile
-## 1852198:         SA         RF      TRUE  2479.115       fertile
-## 1852199:         SA         RF      TRUE  2479.115       fertile
-## 1852200:         SA         RF      TRUE  2479.115       fertile
-##          soilDepthLess30       soilType species   windRisk twoRegm      NPI
-##       1:           FALSE        organic    pine 0.02327795      SA 0.000000
-##       2:           FALSE        organic    pine 0.02332427      SA 0.000000
-##       3:           FALSE        organic    pine 0.02337051      SA 0.000000
-##       4:           FALSE        organic    pine 0.02341666      SA 0.000000
-##       5:           FALSE        organic    pine 0.02346272      SA 0.000000
-##      ---                                                                   
-## 1852196:           FALSE mineral coarse  spruce 0.05105826      SA 3.622254
-## 1852197:           FALSE mineral coarse  spruce 0.05130966      SA 3.622254
-## 1852198:           FALSE mineral coarse  spruce 0.05155323      SA 3.622254
-## 1852199:           FALSE mineral coarse  spruce 0.05178835      SA 3.622254
-## 1852200:           FALSE mineral coarse  spruce 0.05201497      SA 3.622254
-##               MF stands_n   SA_prop THIN2
-##       1: 1.81712     1470 100.00000  <NA>
-##       2: 1.81712     1470 100.00000  <NA>
-##       3: 1.81712     1470 100.00000  <NA>
-##       4: 1.81712     1470 100.00000  <NA>
-##       5: 1.81712     1470 100.00000  <NA>
-##      ---                                 
-## 1852196: 1.74564      894  60.81633  <NA>
-## 1852197: 1.74564      894  60.81633  <NA>
-## 1852198: 1.74564      894  60.81633  <NA>
-## 1852199: 1.74564      894  60.81633  <NA>
-## 1852200: 1.74564      894  60.81633  <NA>
-\end{verbatim}
-
-\begin{figure}
-\centering
-\includegraphics{test_manus_files/figure-latex/fig_thin_frequency-1.pdf}
-\caption{THe frequency of the thinnings by management groups, species
-and harvest intensity gradient}
-\end{figure}
+the highest frequency of thinnings is under CCF management regimes,
+which lineraly increase with harvesting intensity for all tree species.
+Numbers of thinnings in RF remains relatively low comparing to CCF and
+ALL, and strongly increases at high harvest intensity (from 3K for pine
+and from 5K for spruce). The frequency of thinnings in CCF increases 3-4
+times in CCF comparing to RF.
 
 \section{Discussion}\label{discussion}
 
@@ -558,6 +470,34 @@ be only poartial, in some part of the stand (not spatially expicit) map
 erepresent the forest vulnerability to the wind, but it is impossible to
 predict the exact locations of future wind disturbances, given
 uncertainities in future wind occurences
+
+\begin{itemize}
+\tightlist
+\item
+  the glm takes into account the dominant tree species but neglects the
+  stand structure. WE neglected the stand structure in applying the
+  raster level based glm model to stand level information
+\item
+  difficult to link the predicted wind risk to explicit wind damage
+  volume as windthrows are unpredictanvle events in time and explicit
+  locations.
+\item
+  We need to understand what risks about current management decisions
+  involves and if they bring another challenges, such as increasing risk
+  of wind damage. On the other hand, the set-aside stands, if protected,
+  teh wind damage there should not be regarded as lost timber volume due
+  to windthrow, as was not supposed to be logged anyway. Howvere, if
+  windthrow happen in SA stands, the risk of subsequent disturbances
+  such as \emph{Ips typographus} might increase the cost of the
+  effective stand protection in following years.
+\item
+  SA forests have clearly higher wind risk than intensively managemed
+  forests under RF. However, RF as highly specialized in provision of
+  teh single benefit - timber - while deterioration non-woody ecosystem
+  servoices and destroyng habitats for endangered species should be
+  largely replaced over the landscapes by managements fulfillings
+  multiple benefits Eyvindson et al. (2021).
+\end{itemize}
 
 \section*{References}\label{references}
 \addcontentsline{toc}{section}{References}
